# cooking-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/cooking_agent/: __init__.py  __main__.py  cli.py  config.py  supervisor.py
src/cooking_agent/agents/: __init__.py  bring_agent.py  mealie_agent.py  supervisor.py
src/cooking_agent/bring/: __init__.py  agent.py  tools.py
src/cooking_agent/clients/: __init__.py  bring.py  mealie.py
src/cooking_agent/mealie/: __init__.py  agent.py  tools.py
src/cooking_agent/tools/: __init__.py  bring_tools.py  mealie_tools.py
