[project]
name = "cooking-agent"
version = "0.1.0"
description = "Multi-agent cooking assistant using LangChain/LangGraph with Mealie and Bring integrations"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langgraph>=0.2",
    "langchain-openai>=1.0",
    "httpx>=0.27",
    "bring-api>=1.1.1",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",

]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
